--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,32 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="referrer" content="no-referrer" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-  <title>
-    <%= htmlWebpackPlugin.options.title %>
-  </title>
+    <title>SkylerShu's Music</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="referrer" content="no-referrer" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+
+    <meta name="title" content="SkylerShu's Music">
+    <meta name="description" content="Skyler Shu's music website.">
+    <meta name="keywords" content="music, song.">
+    <meta name="author" content="@Skyler Shu">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="SkylerShu's Music">
+    <meta property="og:description" content="Skyler Shu's music website.">
+    <meta property="og:image" content="<%= BASE_URL %>favicon.ico">
+    <meta property="og:url" content="https://music.skylershu.com/">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>favicon.ico" >
+    <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Z137XKQ3M1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-Z137XKQ3M1');
+    </script>
 </head>
 
 <body>
