--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-        gtag('config', 'G-Z137XKQ3M1');
+        gtag('config', 'G-3NQG15YCER');
     </script>
 </head>
 
